# SplitPy

./: .buildinfo  .buildinfo.bak  .gitignore  .travis.yml  LICENSE  README.md  api.html  calc.html  classes.html  genindex.html  gui.html  index.html  links.html  meson.build  objects.inv  offline.html  plot.html  prep.html  py-modindex.html  pyproject.toml  scripts.html  search.html  searchindex.js  setup.py  setup.py.bak  split.html  splitpy.html  tutorials.html  utils.html
.github/workflows/: deploy.yml
.travis/: github_deploy_key.enc
Scripts/: sks_OL_proc.py  sks_offline.py  sks_plot_results.py  sks_prep.py  sks_split.py  split_average.py  split_calc.py  split_calc_auto.py  split_calc_manual.py
_modules/: index.html
_modules/splitpy/: calc.html  classes.html  gui.html  utils.html
_sources/: api.rst.txt  links.rst.txt  plot.rst.txt  prep.rst.txt  splitpy.rst.txt  tutorials.rst.txt
docs/: api.html  api.rst  conf.py  genindex.html  gui.html  gui.rst  index.html  index.rst  links.rst  offline.html  plot.html  prep.html  scripts.rst  search.html  split.html  split.rst  splitpy.rst  tutorials.rst  utils.html  utils.rst
docs/_build/doctrees/: api.doctree  calc.doctree  classes.doctree  conf.doctree  environment.pickle  gui.doctree  index.doctree  offline.doctree  plot.doctree  prep.doctree  split.doctree  utils.doctree
docs/_build/html/: .buildinfo  api.html  calc.html  classes.html  conf.html  genindex.html  gui.html  index.html  objects.inv  offline.html  plot.html  prep.html  py-modindex.html  search.html  searchindex.js  split.html  utils.html
docs/_build/html/_sources/: api.rst.txt  calc.rst.txt  classes.rst.txt  index.rst.txt
docs/_sources/: conf.rst.txt  offline.rst.txt
splitpy/: __init__.py  arguments.py  calc.py  classes.py  conf.py  gui.py  io.py  utils.py
splitpy/examples/figures/: SplitPy_logo.ai
splitpy/scripts/: split_average.py  split_calc_auto.py  split_calc_manual.py
splitpy/tests/: get_meta.py  test_args.py  test_imports.py  test_scripts.py
